Add instruction to use T4 on colab.

--- a/TP_initiation_llm.ipynb
+++ b/TP_initiation_llm.ipynb
@@ -27,6 +27,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Instruction à suivre pour exécution sur Google Colab\n",
+    "\n",
+    "Aller dans `Execution -> Modifier le type d'exécution` puis sélectionner `T4-GPU` pour exploiter les fonctionnalités GPU.\n",
+    "\n",
+    "![Colab GPU](resources/colab_gpu.png \"T4-GPU\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Installation des dépendances\n",
     "\n",
     "Installons les dépendances nécessaires : \n",
