Ajout d'une section aller plus loin

--- a/TP_initiation_llm.ipynb
+++ b/TP_initiation_llm.ipynb
@@ -531,6 +531,34 @@
    "source": [
     "**Exercice** : expliquer en 1 ou 2 lignes l'influence de chacun des 4 paramètres (dans une section markdown)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pour aller plus loin : langchain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Faire le short course https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A partir des compétences fraîchement acquises, réaliser une chaîne de traitement qui \n",
+    "- Demande à l'utilisateur de charger un document PDF\n",
+    "- Permet à l'utiisateur de poser des questions sur ce document\n",
+    "- Mémorise les conversations pour répondre aux questions\n",
+    "\n",
+    "Votre application devra utiliser des templates de prompts.\n",
+    "\n",
+    "- Suggestion de LLM à utiliser : https://huggingface.co/NousResearch/Hermes-3-Llama-3.2-3B. Lisez bien les exemples données sur ce lien car il sera peut être nécessaire d'utiliser la quantization."
+   ]
   }
  ],
  "metadata": {
