Ajout mini projet.

--- a/TP_initiation_llm.ipynb
+++ b/TP_initiation_llm.ipynb
@@ -536,6 +536,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Mini projet : Système de Questions-Réponses avec Classement de Qualité\n",
+    "\n",
+    "**Objectif** : Créer un système qui utilise un LLM pour répondre à des questions sur un domaine spécifique et évaluer la qualité des réponses.\n",
+    "\n",
+    "**Durée estimée** : 3-4 heures\n",
+    "\n",
+    "**Description du projet** :\n",
+    "1. **Créer un dataset de questions-réponses** : Définir 10-15 questions sur un domaine de votre choix (technologie, cinéma, histoire, etc.) avec leurs réponses de référence\n",
+    "2. **Tester différentes approches de prompt** : \n",
+    "    - Zero-shot\n",
+    "    - One-shot \n",
+    "    - Few-shot\n",
+    "3. **Comparer les paramètres de génération** : Tester différentes combinaisons de température, top_k, top_p pour voir leur impact\n",
+    "4. **Évaluation automatique** : Créer une fonction qui compare la réponse du LLM avec la réponse de référence (vous pouvez utiliser des métriques simples comme la longueur, les mots-clés communs, etc.)\n",
+    "5. **Visualisation des résultats** : Afficher un tableau comparatif des performances selon les différentes approches\n",
+    "\n",
+    "**Livrables attendus** :\n",
+    "- Code documenté avec des commentaires\n",
+    "- Analyse des résultats en markdown (quelle approche fonctionne le mieux ?)\n",
+    "- Au moins 2 visualisations (graphiques ou tableaux)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pour aller plus loin : langchain\n",
     "\n",
     "Faire le short course https://www.deeplearning.ai/short-courses/langchain-for-llm-application-development/\n",
